# machinevisionessentials

./: .gitignore  README.md  augment_dataset.py  augment_dataset_obb.py  auto_annotate_obb.py  fototactic.md  label_config.xml  label_config_classification.xml  main.py  predict_test.py  pyproject.toml  split_dataset.py  train_yolo.py  train_yolo_obb.py  webcam_detect.py
Report_Template/: paper.tex  references.bib
examples/: import_tasks_example.jsonl
presentation/: MachineVision_Gruppe8.pptx  build_presentation.py
