[project]
name = "machinevisionessentials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "label-studio>=1.23.0",
]

[project.optional-dependencies]
# Optional: python-pptx für eigene Präsentationen außerhalb dieses Repos.
slides = [
    "python-pptx>=1.0.0",
]

# README Step 3–5: YOLO-Training, Augmentation, Webcam
train = [
    "ultralytics>=8.3.0",
    "opencv-python>=4.8.0",
    "albumentations>=1.4.0",
    "torch",
    "torchvision",
]

# PyTorch mit NVIDIA-GPU (CUDA 12.8). Für CPU-only: Index unten auf .../whl/cpu setzen.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
